clientVerseGit/force-app/main/default/objects/Notification_Event__e/Notification_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event to Notify Creation of Notification Requests</description>
    <label>Notification Event</label>
    <pluralLabel>Notification Events</pluralLabel>
</CustomObject>