clientVerseGit/force-app/main/default/objects/Notification_Event__e/fields/NotificationRequest_Id__c.field-meta.xml
<CustomField>
    <fullName>NotificationRequest_Id__c</fullName>
    <label>NotificationRequest Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>