clientVerseGit/force-app/main/default/objects/Notification_Event__e/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>