clientVerseGit/force-app/main/default/objects/Notification_Event__e/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>